--- a/index.html
+++ b/index.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=referrer content=never><meta name=apple-mobile-web-app-status-bar-style content=black><meta name=full-screen content=yes><meta name=apple-mobile-web-app-capable content=yes><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><style type=text/css>html,
-     body{
-        width: 100%;
-        margin: 0px;
-       
-       /* 
-         background-color: #c86dd7;
-         background: -moz-linear-gradient(-45deg,  #3023ae 0%, #c86dd7 100%);
-        background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#3023ae), color-stop(100%,#c86dd7));
-        background: -webkit-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%) ;
-        background: -o-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%);
-        background: -ms-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%);
-        background: linear-gradient(135deg,  #3023ae 0%,#c86dd7 100%);
-        background-attachment: fixed;*/
-     }</style><title>看美女,看直播</title><link href=static/css/app.74e5e46650a0b8f77ceea40df0f51743.css rel=stylesheet></head><body><div id=loading style="position: fixed;
-        display: box;              /* OLD - Android 4.4- */  
-        display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */  
-        display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */  
-        display: -ms-flexbox;      /* TWEENER - IE 10 */  
-        display: -webkit-flex;     /* NEW - Chrome */  
-        display: flex; 
-        -webkit-justify-content: center;  
-        flex-direction: column;
-        justify-content: center;
-        align-items: center; 
-        background-color: #c86dd7;
-        background: -moz-linear-gradient(-45deg,  #3023ae 0%, #c86dd7 100%);
-        background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#3023ae), color-stop(100%,#c86dd7));
-        background: -webkit-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%) ;
-        background: -o-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%);
-        background: -ms-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%);
-        background: linear-gradient(135deg,  #3023ae 0%,#c86dd7 100%);
-        background-attachment: fixed;
-        color: white;
-        width: 100%;height:100%"><img src=https://ooo.0o0.ooo/2017/06/24/594e330a587a5.jpg width=78><h1>loading</h1><img src=http://samherbert.net/svg-loaders/svg-loaders/bars.svg width=50></div><link rel=stylesheet href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic"><link rel=stylesheet href="//fonts.googleapis.com/icon?family=Material+Icons"><script src=http://cdn.bootcss.com/jquery/3.2.1/jquery.min.js></script><link href=http://cdn.bootcss.com/flowplayer/7.0.4/skin/skin.min.css rel=stylesheet><script src=http://cdn.bootcss.com/flowplayer/7.0.4/flowplayer.min.js></script><script src=//releases.flowplayer.org/hlsjs/flowplayer.hlsjs.min.js></script><div id=app style="top:0;height: 100%"></div><script type=text/javascript src=static/js/manifest.06f75fd6c5fd7d4aece4.js></script><script type=text/javascript src=static/js/vendor.c9cd7c4a4befed3c761b.js></script><script type=text/javascript src=static/js/app.df64d4b3621ec989188d.js></script></body></html>
+<h1>test</h1>
