--- a/index.html
+++ b/index.html
@@ -1,1 +1,152 @@
-<h1>test</h1>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=referrer content=no-referrer><meta name=apple-mobile-web-app-status-bar-style content=black><meta name=full-screen content=yes><meta name=apple-mobile-web-app-capable content=yes><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><style type=text/css>html,
+     body{
+        width: 100%;
+        margin: 0px;
+       
+       /* 
+         background-color: #c86dd7;
+         background: -moz-linear-gradient(-45deg,  #3023ae 0%, #c86dd7 100%);
+        background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#3023ae), color-stop(100%,#c86dd7));
+        background: -webkit-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%) ;
+        background: -o-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%);
+        background: -ms-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%);
+        background: linear-gradient(135deg,  #3023ae 0%,#c86dd7 100%);
+        background-attachment: fixed;*/
+     }
+         @font-face {
+    font-family: iconfont;
+    src: url("https://at.alicdn.com/t/font_380333_uk7foduxe3h4zpvi.eot");
+    src: url("https://at.alicdn.com/t/font_380333_uk7foduxe3h4zpvi.eot?#iefix") format("embedded-opentype"), url("https://at.alicdn.com/t/font_380333_uk7foduxe3h4zpvi.woff") format("woff"), url("https://at.alicdn.com/t/font_380333_uk7foduxe3h4zpvi.ttf") format("truetype"), url("https://at.alicdn.com/t/font_380333_uk7foduxe3h4zpvi.svg#iconfont") format("svg")
+}
+       .iconfont {
+    font-style: normal;
+    font-family: iconfont;
+    font-size: 3.8em;
+    color: inherit
+}
+.iconfont.p {
+  font-family: PingFang SC,Helvetica Neue,Helvetica,Arial,Hiragino Sans GB,Heiti SC,Microsoft YaHei,WenQuanYi Micro Hei,sans-serif;
+      margin-top: 3em;
+    font-size: 1.4em;
+    font-weight: 400;
+    text-align: center;
+    letter-spacing: .05em;
+    color: #333;
+}
+    .L_6HC:before, .L_FC3D:before, .L_K3:before, .L_KL8:before, .L_more:before,
+.L_PK10:before, .L_PL35:before, .L_SSC:before, .L_SYX5:before, .L_XYNC:before {
+    position: relative;
+    
+    text-shadow: 0 1px 1px #fff
+
+}
+
+.L_K3:before {
+    content: "\E65B";
+    color: #e41404
+}
+
+.L_K3:after {
+    text-shadow: 0 .07em .1em rgba(228, 20, 4, .42)
+}
+
+.L_PK10:before {
+    content: "\E661";
+    color: #f22751
+}
+
+.L_PK10:after {
+    text-shadow: 0 .07em .1em rgba(242, 39, 81, .42)
+}
+
+.L_XYNC:before {
+    content: "\E63A";
+    color: #e70014
+}
+
+.L_XYNC:after {
+    text-shadow: 0 .07em .1em rgba(231, 0, 20, .42)
+}
+
+.L_KL8:before {
+    content: "\E662";
+    color: #fc5826
+}
+
+.L_KL8:after {
+    text-shadow: 0 .07em .1em rgba(252, 88, 38, .42)
+}
+
+.L_PL35:before {
+    content: "\E65E";
+    color: #38b366
+}
+
+.L_PL35:after {
+    text-shadow: 0 .07em .1em rgba(56, 179, 102, .42)
+}
+
+.L_FC3D:before {
+    content: "\E65C";
+    color: #00b7ee
+}
+
+.L_FC3D:after {
+    text-shadow: 0 .07em .1em rgba(0, 183, 238, .42)
+}
+
+.L_SSC:before {
+    content: "\E65F";
+    color: #f96e00
+}
+
+.L_SSC:after {
+    text-shadow: 0 .07em .1em rgba(249, 110, 0, .42)
+}
+
+.L_SYX5:before {
+    content: "\E65D";
+    color: #218ddd
+}
+
+.L_SYX5:after {
+    text-shadow: 0 .07em .1em rgba(33, 141, 221, .42)
+}
+
+.L_more:before {
+    content: "\E650";
+    color: #fa7e00
+}
+
+.L_more:after {
+    text-shadow: 0 .07em .1em rgba(250, 126, 0, .42)
+}
+
+.L_6HC:before {
+    content: "\E663";
+    color: #38b39e
+}
+
+.L_6HC:after {
+    text-shadow: 0 .07em .1em rgba(56, 179, 158, .42)
+}</style><title>看美女，看直播</title><link href=static/css/app.95c76e069468aff09d5ca71f367f51eb.css rel=stylesheet></head><body><div id=loading style="position: fixed;
+        display: box;              /* OLD - Android 4.4- */  
+        display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */  
+        display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */  
+        display: -ms-flexbox;      /* TWEENER - IE 10 */  
+        display: -webkit-flex;     /* NEW - Chrome */  
+        display: flex; 
+        -webkit-justify-content: center;  
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; 
+        background-color: #c86dd7;
+        background: -moz-linear-gradient(-45deg,  #3023ae 0%, #c86dd7 100%);
+        background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#3023ae), color-stop(100%,#c86dd7));
+        background: -webkit-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%) ;
+        background: -o-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%);
+        background: -ms-linear-gradient(-45deg,  #3023ae 0%,#c86dd7 100%);
+        background: linear-gradient(135deg,  #3023ae 0%,#c86dd7 100%);
+        background-attachment: fixed;
+        color: white;
+        width: 100%;height:100%"><img src=https://ooo.0o0.ooo/2017/06/24/594e330a587a5.jpg width=78><h2>loading</h2><img src=http://samherbert.net/svg-loaders/svg-loaders/bars.svg width=50></div><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic"><link rel=stylesheet href="https://fonts.googleapis.com/icon?family=Material+Icons"><script src=http://cdn.bootcss.com/jquery/3.2.1/jquery.min.js></script><div id=app style="top:0;height: 100%"></div><script type=text/javascript src=static/js/manifest.fa2acf71bd1a501c7ea9.js></script><script type=text/javascript src=static/js/vendor.abde7b39bfe34a129041.js></script><script type=text/javascript src=static/js/app.32150c51a9087fb9998c.js></script></body></html>
